# scarlet

./: .gitignore  Cargo.toml
.cargo/: config
examples/bench/: main.rs
examples/exporter/: main.rs
examples/hello_suzanne/: main.rs  shader.frag  shader.vert  suzanne.glb
examples/hello_triangle/: main.rs  shader.frag  shader.vert
examples/static_viewer/: main.rs  milch.glb
examples/viewer/: main.rs  shader.frag  shader.vert
proj/: milch.blend  room.blend
report/: .gitignore  main.tex
report/benchmark/: benchmark.eps
report/code/: phase1.frag  phase2.frag  phase3.frag  phase4.frag
scene/: room.glb  room_animated.glb  room_no_lights.glb
src/: app.rs  application.rs  lib.rs  logging.rs  scene.rs  shader.rs
src/shaders/: pbr.frag  prepare.frag  prepare.vert  quad.vert  quad_r.frag  quad_rgb.frag  ssr.frag  ssr.vert  ssra.frag  ssrb.vert  ssrbh.frag  ssrbv.frag
