[package]
name = "scarlet"
version = "0.0.1"
authors = ["Dario Ostuni <dario.ostuni@gmail.com>"]
edition = "2018"

[dependencies]
glad-gles2 = { path = "deps/glad-gles2" }
glutin = "0.29"
log = "0.4"
pretty_env_logger = "0.4"
nalgebra = "0.19"

[dependencies.gltf]
version = "0.15"
features = ["extras", "names", "utils", "import", "KHR_lights_punctual", "guess_mime_type"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
png = "0.15"

[patch.crates-io]
gltf = { git = "https://github.com/gltf-rs/gltf.git" }
